force-app/main/default/objects/CA_Vistoria__c/CA_Vistoria__c.object-meta.xml
<CustomObject>
    <label>Vistoria</label>
    <nameField>
        <label>Vístoria</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vistorias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>