force-app/main/default/objects/CA_Vistoria__c/fields/CA_Contrato__c.field-meta.xml
<CustomField>
    <fullName>CA_Contrato__c</fullName>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Vistorias</relationshipLabel>
    <relationshipName>Vistorias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>