force-app/main/default/objects/CA_Vistoria__c/fields/CA_DatahoraCancelamentoVistoria__c.field-meta.xml
<CustomField>
    <fullName>CA_DatahoraCancelamentoVistoria__c</fullName>
    <label>Data e hora do cancelamento da vistoria</label>
    <type>DateTime</type>
</CustomField>