force-app/main/default/objects/CA_Vistoria__c/fields/CA_DataHoraVistoria__c.field-meta.xml
<CustomField>
    <fullName>CA_DataHoraVistoria__c</fullName>
    <label>Data e hora da vistoria</label>
    <type>DateTime</type>
</CustomField>