force-app/main/default/objects/CA_Vistoria__c/fields/CA_IdExterno__c.field-meta.xml
<CustomField>
    <fullName>CA_IdExterno__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ID Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>