force-app/main/default/objects/CA_Vistoria__c/fields/CA_NomeVistoriador__c.field-meta.xml
<CustomField>
    <fullName>CA_NomeVistoriador__c</fullName>
    <label>Nome do vistoriador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>