force-app/main/default/objects/CA_Vistoria__c/fields/CA_Observacoes__c.field-meta.xml
<CustomField>
    <fullName>CA_Observacoes__c</fullName>
    <label>Observações</label>
    <length>255</length>
    <type>Text</type>
</CustomField>