force-app/main/default/objects/CA_Vistoria__c/fields/CA_SituacaoVistoria__c.field-meta.xml
<CustomField>
    <fullName>CA_SituacaoVistoria__c</fullName>
    <label>Situação da vistoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>