force-app/main/default/objects/CA_Vistoria__c/fields/CA_Tipovistoria__c.field-meta.xml
<CustomField>
    <fullName>CA_Tipovistoria__c</fullName>
    <label>Tipo de vistoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>