force-app/main/default/objects/CA_Vistoria__c/fields/CA_VisitaAcompanhada__c.field-meta.xml
<CustomField>
    <fullName>CA_VisitaAcompanhada__c</fullName>
    <label>Visita acompanhada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>