force-app/main/default/objects/CA_Vistoria__c/recordTypes/Entrada.recordType-meta.xml
<RecordType>
    <fullName>Entrada</fullName>
    <active>true</active>
    <label>Entrada</label>
</RecordType>