force-app/main/default/objects/CA_Vistoria__c/recordTypes/Revistoria.recordType-meta.xml
<RecordType>
    <fullName>Revistoria</fullName>
    <active>true</active>
    <label>Revistoria</label>
</RecordType>